The Samba-Bugzilla – Bug 10271
Incorrect job-ID sent in print job notifications
Last modified: 2013-11-27 10:08:02 UTC
Print jobs have multiple identifiers: the regular spoolss jobid, which is allocated by spoolss on job submission, and the system jobid, which is assigned by the printing back-end. Currently these identifiers are mixed in print job queue tracking. As a result, print job notifications intermittently carry the incorrect system print job identifier. Print clients can use notification job-ids in subsequent spoolss SetJob requests. Returning an incorrect identifier can result in the failure of such requests, e.g. spoolss_SetJob(SPOOLSS_JOB_CONTROL_DELETE).
Created attachment 9429 [details] proposed fix for master branch
Comment on attachment 9429 [details] proposed fix for master branch LGTM (although there are a few minor whitespace changes mixed in :-). Do you want me to push to master ? Jeremy.
(In reply to comment #2) > Comment on attachment 9429 [details] > proposed fix for master branch > > LGTM (although there are a few minor whitespace changes mixed in :-). > > Do you want me to push to master ? Yes please. Thanks for the review Jeremy!
Comment on attachment 9429 [details] proposed fix for master branch looks good, thanks.
Comment on attachment 9429 [details] proposed fix for master branch I've pushed this to master with your reviewed-by tags attached. Backports for 4.1, 4.0 and 3.6 to follow...
Created attachment 9439 [details] patch for 4.1, straight cherry-pick from master
Created attachment 9440 [details] patch for 4.0, straight cherry-pick from master
Created attachment 9444 [details] patch for 3.6, adds minor server_reload change
@Karolin, please pull the 4.1 and 4.0 patches, the 3.6 change will need to wait until it's been reviewed.
Pushed to autobuild-v4-1-test and autobuild-v4-0-test. Unfortunately, it's too late for 3.6.21 (which will be the last maintenance release of the Samba 3.6 release series).
Pushed to v4-1-test and v4-0-test. Closing out bug report. Thanks!